Add chang  yossef branch

--- a/app/package.json
+++ b/app/package.json
@@ -26,8 +26,11 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
+    "expo-local-authentication": "^17.0.8",
     "expo-localization": "^17.0.8",
     "expo-router": "~6.0.15",
+    "expo-secure-store": "^15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
