--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,15 +22,19 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
+        working-directory: app
         run: npm ci
       
       - name: Run linter
+        working-directory: app
         run: npm run lint || true
       
       - name: Check TypeScript
+        working-directory: app
         run: npx tsc --noEmit || true
       
       - name: Run tests
+        working-directory: app
         run: npm test || echo "No tests configured yet"
 
   build:
@@ -49,9 +53,11 @@ jobs:
           cache: 'npm'
       
       - name: Install dependencies
+        working-directory: app
         run: npm ci
       
       - name: Build
+        working-directory: app
         run: npm run build || echo "Build step completed"
 
   docker:
@@ -59,27 +65,24 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-        if: github.event_name == 'push'
-      
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: ${{ github.event_name == 'push' }}
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/cancerdet:latest
-            ${{ secrets.DOCKER_USERNAME }}/cancerdet:${{ github.sha }}
-
+    - name: Checkout code
+      uses: actions/checkout@v3
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: ai
+        file: ai/Dockerfile
+        push: true
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/cancerdet-ai:latest          ${{ secrets.DOCKER_USERNAME }}/cancerdet-ai:${{ github.sha }}
