--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -1,11 +1,11 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-numpy==1.24.3
+numpy
 pydantic==2.5.0
 python-multipart==0.0.6
 pypdf==3.15.0
 PyPDF2==3.0.1
-pandas==2.1.4
+pandas
 scikit-learn==1.3.2
 joblib==1.3.2
 tensorflow-cpu==2.14.0
