--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   unit-tests:
+    name: Unit Tests
     runs-on: ubuntu-latest
     
     steps:
@@ -23,13 +24,14 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
-        working-directory: app
       
       - name: Run tests
-        run: npm test || echo "Tests completed with warnings"
-        working-directory: app
+        run: |
+          echo "Running tests..."
+          npm test || echo "Tests completed with warnings"
 
   lint:
+    name: Lint Code
     runs-on: ubuntu-latest
     
     steps:
@@ -44,12 +46,30 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
-        working-directory: app
       
       - name: Run ESLint
         run: npm run lint || echo "Linting completed"
-        working-directory: app
+      
+      - name: Check TypeScript
+        run: npx tsc --noEmit || echo "TypeScript check completed"
+
+  type-check:
+    name: Type Check
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
       
       - name: TypeScript Check
-        run: npx tsc --noEmit || echo "TypeScript check completed"
-        working-directory: app
+        run: npx tsc --noEmit
+
