--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
-  workflow_dispatch:
 
 jobs:
   test:
@@ -24,28 +23,21 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
-        working-directory: app
       
       - name: Run linter
         run: npm run lint || true
-        working-directory: app
       
       - name: Check TypeScript
         run: npx tsc --noEmit || true
-        working-directory: app
       
       - name: Run tests
         run: npm test || echo "No tests configured yet"
-        working-directory: app
 
   build:
     name: Build Application
     runs-on: ubuntu-latest
     needs: test
     
-
-
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -58,11 +50,9 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
-        working-directory: app
       
       - name: Build
         run: npm run build || echo "Build step completed"
-        working-directory: app
 
   # docker:
   #   name: Build Docker Image
@@ -78,33 +68,18 @@ jobs:
   #       uses: docker/setup-buildx-action@v2
       
   #     - name: Login to Docker Hub
-  #       if: github.event_name == 'push'
-  #       uses: docker/login-action@v3
+  #       uses: docker/login-action@v2
   #       with:
   #         username: ${{ secrets.DOCKER_USERNAME }}
   #         password: ${{ secrets.DOCKER_PASSWORD }}
+  #       if: github.event_name == 'push'
       
   #     - name: Build and push Docker image
   #       uses: docker/build-push-action@v4
   #       with:
   #         context: .
-  #         push: true
+  #         push: ${{ github.event_name == 'push' }}
   #         tags: |
   #           ${{ secrets.DOCKER_USERNAME }}/cancerdet:latest
   #           ${{ secrets.DOCKER_USERNAME }}/cancerdet:${{ github.sha }}
-  #     - name: Test Docker Secrets
-  #       run: |
-  #         echo "Checking Docker secrets..."
-  #         if [ -n "${{ secrets.DOCKER_USERNAME }}" ]; then
-  #           echo "DOCKER_USERNAME is set"
-  #         else
-  #           echo "ERROR: DOCKER_USERNAME is empty!"
-  #           exit 1
-  #         fi
-          
-  #         if [ -n "${{ secrets.DOCKER_PASSWORD }}" ]; then
-  #           echo "DOCKER_PASSWORD is set"
-  #         else
-  #           echo "ERROR: DOCKER_PASSWORD is empty!"
-  #           exit 1
-  #         fi
+
