--- a/AI2/requirements.txt
+++ b/AI2/requirements.txt
@@ -1,11 +1,13 @@
-# requirements_new.txt
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-# استخدم إصدار أحدث من TensorFlow أو scikit-learn بدلاً منه
+
 numpy==1.24.3
+pandas==2.1.4
+
+scikit-learn==1.3.2
+joblib==1.3.2
+tensorflow==2.13.1
+
 pydantic==2.5.0
 python-multipart==0.0.6
 PyPDF2==3.0.1
-pandas==2.1.4
-scikit-learn==1.3.2
-joblib==1.3.2
