--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -1,13 +1,10 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-
+fastapi
+uvicorn[standard]
 numpy
 pandas
-
-scikit-learn==1.3.2
-joblib==1.3.2
-tensorflow==2.13.1
-
-pydantic==2.5.0
-python-multipart==0.0.6
-PyPDF2==3.0.1
+scikit-learn
+joblib
+tensorflow
+pydantic
+python-multipart
+PyPDF2
